logs/atlas.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atlas-0.27.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Compiling './lib/python3.5/site-packages/src/action.py'...
***   File "./lib/python3.5/site-packages/src/action.py", line 155
    print '[Serial Mode]'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/atlas_main.py'...
***   File "./lib/python3.5/site-packages/src/atlas_main.py", line 38
    print 'Error: ', error
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/component.py'...
***   File "./lib/python3.5/site-packages/src/component.py", line 158
    except util.ConfigError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/filecache.py'...
***   File "./lib/python3.5/site-packages/src/filecache.py", line 31
    print "WARNING: filecache.CACHE_DEBUG is TRUE - this will slow down the build"
                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/graph.py'...
***   File "./lib/python3.5/site-packages/src/graph.py", line 56
    print '%s has %d dependencies: ' % (target_comp, len(matches))
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/log.py'...
***   File "./lib/python3.5/site-packages/src/log.py", line 25
    print "INFO: ", msg
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/metrics.py'...
***   File "./lib/python3.5/site-packages/src/metrics.py", line 104
    print Output()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/mod'...
Compiling './lib/python3.5/site-packages/src/mod/cpp_include.py'...
***   File "./lib/python3.5/site-packages/src/mod/cpp_include.py", line 77
    print "POSSIBLE HEADER: %s" % full_include
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/mod/flex_test.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (flex_test.py, line 33)
Compiling './lib/python3.5/site-packages/src/util.py'...
***   File "./lib/python3.5/site-packages/src/util.py", line 51
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/threadpool-1.3.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
